tests/neg/noimports.scala
//> using options -Yno-imports
object Test {
  val t: Int = 1 // error: not found Int
}
